--- a/github/workflows/ci.yaml
+++ b/github/workflows/ci.yaml
@@ -1,44 +1,44 @@
-# github/workflows/ci.yaml
-
 name: CI Pipeline
 
 on:
   push:
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-     - name: Checkout Repository
-     - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-     - name: Set up Python
-     - uses: actions/setup-python@v4
-       with: 
-        python-version:3.11.5
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11.5
 
-     - uses: iterative/setup-cml@v2
+      - uses: iterative/setup-cml@v2
 
-     - name: install-dependencies
-       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirement.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirement.txt
 
-     - name: Run main file
-       run : |
-        python main.py
-     - name: Create CML report
-       env:
-        REPO_TOKEN: ${{secret.GITHUB_TOKEN}}
-       run: |
-         echo "# First Line of our report" >> report.md
-         echo "## Bar Plots" >> report.md
-         echo '![](./bars.png "Bar plot")' >> report.md
-         echo "## Line Plots" >> report.md
-         echo '![](./lines.png "Bar plot")' >> report.md
+      - name: Run Main File
+        run: |
+          python main.py
 
-         cml comment create report.md
+      - name: Run Tests
+        run: |
+          python -m unittest discover
 
-      
+      - name: Create CML Report
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "# First Line of our report" >> report.md
+          echo "## Bar Plots" >> report.md
+          echo '![](./bars.png "Bar plot")' >> report.md
+          echo "## Line Plots" >> report.md
+          echo '![](./lines.png "Line plot")' >> report.md
+
+          cml comment create report.md
